--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ember-cli-tslint": "^0.1.3",
     "ember-cli-uglify": "^2.0.0-beta.1",
     "qunitjs": "^2.3.3",
+    "regenerator-runtime": "^0.11.1",
     "typescript": "^2.2.2"
   },
   "engines": {
